# spotify-workouts

./: .gitignore  README.md  cloudfront-template.yaml  lambda-role-template.yaml  pyproject.toml
src/openai/: TestInstructor.py
src/spotify-oauth/: app.py  requirements.txt  secrets.py
src/spotify-oauth/.chalice/: config.json
src/spotify-oauth/.chalice/deployed/: dev.json
src/web/: .gitignore  app.py
src/web/.chalice/: config.json
src/web/.chalice/deployed/: dev.json
src/web/backend/: app.py  pyproject.toml  requirements.txt  test_token.py
src/web/backend/.chalice/: config.json
src/web/backend/.chalice/deployed/: dev.json
src/web/backend/chalicelib/: resolvers.py  schema.graphql
src/web/chalicelib/: index.html
src/web/frontend/: README.md  codegen.yml  deploy.sh  package-lock.json  package.json
src/web/frontend/src/: App.js  App.tsx  index.tsx
src/web/frontend/src/queries/: IsLoggedIn.graphql
web/: app.py
web/.chalice/deployed/: dev.json
