[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Tina Huang <tina@monkey.name>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
chalice = "^1.31.0"
instructor = "^1.2.6"
openai = "^1.29.0"
requests = "^2.31.0"
boto3 = "^1.34.104"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
